Chapter intro-->background and using footnotes in titles

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -10,6 +10,7 @@
 \usepackage{url}
 \usepackage{subfigure}
 \usepackage{afterpage}
+\usepackage[stable]{footmisc}
 \usepackage{pdflscape} % for 'landscape' environment
 \usepackage[pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 \bibliographystyle{aasjournal}
@@ -75,7 +76,7 @@ Binary stars and higher-order multiple systems are a ubiquitous outcome of star 
 
 \listoffigures
 
-\listoftables
+%\listoftables
 
 \mainmatter
 
