--- a/paper1.tex
+++ b/paper1.tex
@@ -1,8 +1,10 @@
 
 
-\chapter{Detection of Low-Mass-ratio Stellar Binary Systems}
+\chapter{Detection of Low-Mass-ratio Stellar Binary Systems\footnote{
+  This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+}}
 \label{chap:pilot}
-We now turn back to the variant of the direct spectral detection method originally discussed in Chapter \ref{chap:dsd}, in which the targets are very early-type, rapidly-rotating stars. This chapter was previously published \citep{Gullikson2013_2}. The co-author, Sarah Dodson-Robinson, was my advisor at the time and provided much of the idea for the project.
+We now turn back to the variant of the direct spectral detection method originally discussed in Chapter \ref{chap:dsd}, in which the targets are very early-type, rapidly-rotating stars. 
 
 
 \section{Introduction}
@@ -1013,10 +1015,9 @@ Archive Facility. Funding for this work was provided by a National Science Found
   
 %\begin{center}
 \clearpage
-\afterpage{%
  \begin{small}
    \begin{longtable}{|ccp{6cm}|}
-      \caption{Summary of Cross-Correlation Function Peak Rejection Steps. See Section \ref{paper1_sec:results} for more information} \\
+      \caption{Summary of Cross-Correlation Function Peak Rejection Steps. See Section \ref{paper1_sec:results} for more information \label{paper1_tab:rejection}} \\
         \hline
         Step  & Description & Method \\ \hline
         \endfirsthead
@@ -1043,11 +1044,9 @@ Archive Facility. Funding for this work was provided by a National Science Found
         candidate temperature can exist as close to the primary B-star as the velocity indicates (assumes circular orbit)
         
         
-    \label{paper1_tab:rejection}
+    
   \end{longtable}
  \end{small}
- }
-%\end{center}
 
 \scriptsize 
 \begin{samepage}
