--- a/paper3.tex
+++ b/paper3.tex
@@ -1,7 +1,9 @@
 
-\chapter{Correcting for Telluric Absorption: Methods, Case Studies, and the TelFit Code}
+\chapter{Correcting for Telluric Absorption: Methods, Case Studies, and the TelFit Code\footnote{
+  This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
+}}
 \label{chap:telfit}
-This chapter was previously published \citep{Gullikson2014}. Both co-authors were my advisor at some point while I was developing this code. They helped guide the code requirements and provided a science case study for the work. Adam Kraus provided observational data for the case study.
+
 
 \section{Introduction}
 All ground-based astronomical spectra suffer from contamination by the Earth's atmosphere, which introduces so-called telluric lines into the spectrum. The wavelength of the telluric lines change very slightly with wind along the line of sight and pressure shifts in water lines, and the relative line strength can vary a great deal with the observatory location, weather and the airmass of the observation. The telluric lines must be removed from the spectrum to retrieve many stellar features redward of about 500 nm, which is a nontrivial task.
