--- a/paper4.tex
+++ b/paper4.tex
@@ -1,8 +1,10 @@
 
 
-\chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
+\chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system\footnote{
+  This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the direct spectral detection methodology. They obtained the majority of the data used in the work.
+}}
 \label{chap:psi1dra}
-We now turn to our first case study in using the direct spectral detection method to find a faint companion to the bright star $\psi^1$ Draconis. in this chapter, we use archival data originally obtained in order to search for planetary companions. This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the direct spectral detection methodology. They obtained the majority of the data used in the work.
+We now turn to our first case study in using the direct spectral detection method to find a faint companion to the bright star $\psi^1$ Draconis. in this chapter, we use archival data originally obtained in order to search for planetary companions. 
 
 \section{Introduction}
 \label{paper4_sec:intro}
