--- a/paper5.tex
+++ b/paper5.tex
@@ -1,8 +1,10 @@
-\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems}
+\chapter{Direct Spectral Detection: An Efficient Method to Detect and Characterize Binary Systems\footnote{
+    This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
+}}
 \label{chap:dsd}
-This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sarah Dodson-Robinson were both my advisors for part of the time that I spent developing the method outlined below. They provided much of the inspiration for the method and technical advice. Daniel Jaffe is the principal investigator for one of the instruments used in this work, the IGRINS spectrograph. The rest of the authors provided data that I used to calibrate the method.
 
-\section{Introduction}
+
+\section{Background}
 \label{paper5_sec:intro}
 
 
@@ -858,8 +860,8 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 
 
 
+\clearpage
 \newpage
-\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{cccccccc}
     
@@ -908,5 +910,5 @@ Star & (K) & (dex) & ($\mathrm{km\ s}^{-1}$) & (K) & (km s$^{-1}$) \\ \hline
 
 \end{longtable}
 \end{scriptsize}
-}
+
 
