--- a/paper6.tex
+++ b/paper6.tex
@@ -1,12 +1,13 @@
 
-\chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars}
+\chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars\footnote{
+    This chapter has been submitted for publication to the Astronomical Journal, but is not yet published.
+}}
 \label{chap:survey}
 
-Finally, we use the direct spectral detection method to perform a large survey aimed at detecting cool companions to hot A- and B-type stars. This chapter has been submitted for publication to the Astronomical Journal, but is not yet published.
 
 
 
-\section{Introduction}
+\section{Background}
 \label{paper6_sec:intro}
 
 Stellar multiplicity is an inevitable and common outcome of star formation, with roughly half of all solar-type field stars in binary or multiple systems \citep{Raghavan2010} and an even higher fraction as the stellar mass increases \citep{Zinnecker2007}. Young stellar associations and clusters tend to have even higher multiplicity \citep{Duchene2013}, indicating that stars often form in multiple systems that are subsequently destroyed by dynamical interactions as the cluster dissociates. 
@@ -381,7 +382,7 @@ We then use the formalism introduced in \citet{Foreman2014}, which self-consiste
 
 We interpret the mass-ratio distribution in terms of formation mechanism in Section \ref{paper6_subsec:theory}. It is likely that the mass-ratio distribution we find is largely a result of preferential accretion onto the secondary star, which largely stops when the circumprimary or circumbinary disk dissipates.
 
-In the effort of open and reproducible research, we have made several data products freely available to the community. All of the reduced and telluric-corrected spectra used in this study are available at \url{https://zenodo.org/record/46340}. Samples of the primary and companion mass and system age posterior distributions are available at \url{https://zenodo.org/record/48073}, as are the posterior distributions for the parameters fit in Section \ref{sec:mrd} and every cross-correlation function generated in our analysis. We additionally provide a series of python libraries and jupyter notebooks with the computer code we used for the analysis on github: \url{https://github.com/kgullikson88/BinaryInference}.
+In the effort of open and reproducible research, we have made several data products freely available to the community. All of the reduced and telluric-corrected spectra used in this study are available at \url{https://zenodo.org/record/46340}. Samples of the primary and companion mass and system age posterior distributions are available at \url{https://zenodo.org/record/48073}, as are the posterior distributions for the parameters fit in Section \ref{paper6_sec:mrd} and every cross-correlation function generated in our analysis. We additionally provide a series of python libraries and jupyter notebooks with the computer code we used for the analysis on github: \url{https://github.com/kgullikson88/BinaryInference}.
 
 
 
@@ -1302,7 +1303,7 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
 \begin{scriptsize}
 \begin{longtable}{|l|llllllll|}
     
-    \caption{NIRI Observation log.}
+    \caption{NIRI Observation log. \label{paper6_tab:imaging_obs}}
     \\ \hline
       Star &  K &   date & Exposure & $\rho$ & $\theta$ & $\Delta \mathrm{K_c}$ & $M_2 (M_{\odot})$ & $a$ (AU)  \\ \hline
     \endfirsthead
@@ -1350,7 +1351,7 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
 \begin{scriptsize}
 \begin{longtable}{|l|rrlrrrll|}
     
-    \caption{Companion Detections.}
+    \caption{Companion Detections. \label{paper6_tab:companions}}
     \\ \hline
        &  &  & Used in & $T_\mathrm{eff}$ & $v\sin{i}$ & [Fe/H] & \multicolumn{2}{c}{Mass ($M_{\odot}$)} \\ 
        Star & Component & $N_\mathrm{obs}$ & Analysis  &   (K) &   ($\mathrm{km\ s}^{-1}$) &  (dex) &  Isochrone &  Spectral Type \\ \hline
