Updated to full name and add B.S. to past degrees

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 
-\author{Kevin Gullikson}
+\author{Kevin Carl Gullikson}
 \title{Spectroscopic Detection and Characterization of Extreme Flux-Ratio Binary Systems}
 \date{Revised: \today}
 
@@ -41,7 +41,7 @@
 \UTaddcommittee{Michael Meyer}
 \end{UTcommittee}
 
-\UTtitlepage{M.A.}{May}
+\UTtitlepage{B.S; M.A.}{May}
 
 \frontmatter
 
