Updated per Adams comments

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -84,15 +84,27 @@ Binary stars and higher-order multiple systems are a ubiquitous outcome of star 
 
 Stellar multiplicity is an inevitable and common outcome of star formation, with roughly half of all solar-type field stars in binary or multiple systems \citep{Raghavan2010} and an even higher fraction as the stellar mass increases \citep{Zinnecker2007}. Young stellar associations and clusters tend to have even higher multiplicity \citep{Duchene2013}, indicating that stars often form in multiple systems that are subsequently destroyed by dynamical interactions as the cluster dissociates. 
 
+\section{Binary Star Formation}
+
 The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. \citet{Machida2008} performed a parameter study by simulating several collapsing clouds with different levels of thermal, rotational, and magnetic energies. They found that the initial fragments occur on wide separations ($a \gtrsim 3 AU$) if the rotational energy dominates that of the magnetic field. If the magnetic energy dominates, however, then the fragmentation occurs much later and generates very close binary systems ($a \lesssim 1 AU$). 
 
 \citet{Machida2008} do not follow the accretion or migration evolution of the fragments, but we can estimate that evolution from the relevant physics: If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves.  However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass close companions \citep{Kratter2006, Stamatellos2011} directly. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material and high angular momentum infalling core material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}, although some recent work has suggested the preferential accretion may go in the opposite direction as a result of magnetic disk braking \citep{Zhao2013}.
+
+
+
+
+\section{Other Implications of Binarity}
 
 Beyond informing star formation models, intermediate-mass stars have recently seen a revival of interest as potential young planet hosts, spurred largely by the detection of planets orbiting nearby \mbox{$\sim2 M_{\odot}$} stars on both wide \citep[e.g.][]{Lagrange2010, Marois2008} and close \citep{Johnson2011} orbits. Since the main sequence lifetime of an A- or B-type star is tens to hundreds of Myrs, a planetary companion would still be bright and easier to detect with direct imaging techniques than the same companion orbiting an old, solar-type star \citep{Marley2007}. Robust age estimates for nearby intermediate-mass stars are therefore very important to provide a vetted sample of young systems to search, and to convert the companion brightness into a mass estimate. 
 
 In the context of planetary companions, stellar-mass binary companions are contaminants; companions complicate radial velocity planet searches because they necessitate simultaneous modeling of both stellar motions \citep[e.g.][]{Bergmann2015}. Likewise, companions complicate direct imaging planet searches by requiring either extremely high-contrast instrumentation \citep{Thalmann2014} or specialized coronagraphs \citep{Crepp2010}. 
 
 However, known binary stars are typically avoided in planet search programs for a more fundamental reason: the binary companion depletes or destroys the planet-forming disk. By combining a binary census of the $\sim 2$ Myr Taurus-Auriga star-forming region with a disk census of the same, \cite{Kraus2012} showed that close ($\lesssim 40$ AU) binaries are about 2-3 times less likely to host a protoplanetary disk, and so hasten disk dispersal. Even if a disk survives, it tends to be depleted in mass by a factor of $\sim 25$ for binary separations $\lesssim 30$ AU \citep{Harris2012}. A full binary census focusing on companions within $\sim 100$ AU is therefore necessary in order to generate a direct-imaging planet search sample.
+
+Since intermediate-mass stars have main-sequence lifetimes of tens to hundreds of Myr, dynamical mass estimates for late-type companions provide a direct test of stellar evolutionary models. Therefore a binarity survey for close companions to intermediate-mass stars, which measures the companion temperature, surface gravity, metallicity, and mass, is necessary. The survey we describe in this thesis does not directly measure the companion mass; in fact, we use stellar evolutionary models to estimate the mass. However, follow-up observations of the systems we detect to fit the full double-lined spectroscopic orbit would provide just such a survey.
+
+
+
 
 \section{Detection Methods}
 
@@ -111,13 +123,17 @@ Both imaging and interferometry can usually characterize the companion in a sing
 
 \section{Previous Observational Results}
 
-The mass ratio, period, and eccentricity distributions are fairly well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, the mass-ratio distribution appears to be invariant to separation for these stars \citep{Meyer2013}, contrary to the theoretical expectations. All of the distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to be more rare and farther away, meaning many of the companions are angularly close to the very bright primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, detecting the companion spectrum suffers from the same flux-ratio difficulties as imaging methods, and is the only way to characterize the detected companion.
+The mass ratio, period, and eccentricity distributions are well-known for solar type stars and cooler stars. M dwarf binary systems tend to have roughly equal-mass components at separations of a few AU \citep{Fischer1992}, while binaries with a solar-type primary have a flat mass-ratio distribution and are found at separations of a few tens to hundreds of AU \citep{Raghavan2010}. Interestingly, the mass-ratio distribution appears to be invariant to separation for binaries at these masses \citep{Reggiani2011, Meyer2013}.
 
-Nonetheless, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
+All of the distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to be more rare and farther away, meaning many of the companions are angularly close to the very bright primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators with few intrinsic spectral lines, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, detecting the companion spectrum suffers from the same flux-ratio difficulties as imaging methods, and is the only way to characterize the detected companion.
 
-Radial velocity monitoring surveys can detect much closer companions than imaging surveys, but are typically only complete to low-mass companions if the primary is a slow rotator. Chemically peculiar Am stars are typically slow rotators, a fact typically attributed to tidal braking from binary companions; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the power law distribution found around chemically normal stars at wide separations.
+Binary systems with O-type primaries are mostly known through radial velocity monitoring surveys because they are so rare that only very few are amenable to imaging methods. \citet{Sana2013} measured the mass-ratio distribution of O-type binary systems in the Tarantula Nebula, finding it is well-fit by a power-law $f(q) \sim q^{-\gamma}$ with $\gamma = 1.00 \pm 0.40$, indicating a preference for companions much smaller than the primary. Other surveys with typically smaller sample sizes tend towards a more uniform mass-ratio distribution, albeit with large uncertainty \citep{Sana2012, Kiminki2012}. Imaging surveys, while incomplete, also find that the mass-ratio distribution is consistent with flat \citep{Peter2012} at wide separations.
 
-The remainder of this thesis is structured as follows: we start by describing the direct spectral detection method in great detail in Chapter \ref{chap:dsd}. We then detour to discuss TelFit, a tool I created to fit and remove the contamination from Earth's atmosphere in Chapter \ref{chap:telfit}. We apply a variant of the direct spectral detection method to two side projects in Chapters \ref{chap:psi1dra} and \ref{chap:hotjup}. We then describe the pilot and main survey program in Chapters \ref{chap:pilot} and \ref{chap:survey} (respectively), and provide overall survey conclusions in Chapter \ref{chap:conclusions}.
+Intermediate-mass binary systems (primary spectral type A or B), while still rarer than solar-type binaries, are common enough that less biased surveys are possible. \citet{Kouwenhoven2007} combine imaging and radial velocity measurements of intermediate-mass stars in the young Scorpius OB2 association, and find that the mass-ratio distribution slightly favors low-mass companions ($\gamma \approx 0.4$). More recently, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
+
+There are few systematic radial velocity surveys around normal intermediate-mass stars, which would provide a more complete picture of the close companion mass-ratio distribution. Chemically peculiar Am stars are typically slow rotators, a fact typically attributed to tidal braking from binary companions; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the power law distribution found around chemically normal stars at wide separations.
+
+The bulk of this thesis is devoted to a spectroscopic survey of field intermediate-mass stars. We introduce the general method in great detail in Chapter \ref{chap:dsd}. We then detour to discuss TelFit, a tool we created to fit and remove the contamination from Earth's atmosphere in Chapter \ref{chap:telfit}. We apply a variant of the direct spectral detection method to two side projects in Chapters \ref{chap:psi1dra} and \ref{chap:hotjup}. We then describe the pilot and main survey program in Chapters \ref{chap:pilot} and \ref{chap:survey} (respectively), and provide overall survey conclusions in Chapter \ref{chap:conclusions}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -164,8 +180,10 @@ The remainder of this thesis is structured as follows: we start by describing th
 % Chapter 7  (Conclusions)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Conclusions}
+\chapter{Summary \& Conclusions}
 \label{chap:conclusions}
+
+\section{Summary of Key Results}
 
 In this thesis, we developed and characterized a spectral method to find companions to stars with a variety of temperatures. The method can be summarized as a two step process: first, prepare the spectrum by attempting to remove the signal from the primary star spectrum. The second step is to cross-correlate the prepared spectra against a grid of model spectra spanning a large parameter space. The cross correlation function (CCF) attempts to match the model spectrum template against the prepared data; if it finds a match for the template in the data then the CCF will have a strong peak at the radial velocity of the companion.
 
@@ -183,9 +201,12 @@ We find that the companions we detect, which are necessarily all close companion
 
 \section{Theoretical Implications}
 
-The mass-ratio distribution derived in this work has a very different form than the power law found for companions at wide separations. This is likely a result of disk interactions as the two components are accreting. The close companions that we detect may form with similar masses to their counterparts at large separations ($a \gtrsim 1000\ AU$), but preferentially accrete matter from the dense primary star disk. The result would be a depletion of low mass ratio companions as they become intermediate to high mass ratio companions. The characteristic scale of $\sim 0.3$ that we see in Figure \ref{paper6_fig:mrd} would then be related to the disk timescale and the time at which the fragments form, since with enough time the preferential accretion would push all companions to $q = 1.0$. 
+The mass-ratio distribution derived in this work has a very different form than the power law found for companions at wide separations. This is likely a result of the companion's accretion history. If it started at a wide separation, it may have migrated in by accreting a significant fraction of its final mass from core material, a process that can change the separation by 1-2 orders of magnitude \citep{Bate2000}. Thus if the companion formed with a small ratio at large separations, its final configuration will be a close companion with large mass ratio. Companions that migrated to inside of $\sim 100$ AU will likely have large mass ratios due to this process.
 
-It is also possible that some of the companions found in this work were formed from a gravitationally unstable disk \citep[e.g.][]{Kratter2006, Stamatellos2011}. Being a completely different formation mechanism than the way wide companions form, we would expect the initial mass function to differ. Such companions would undergo the same preferential accretion discussed above. This explanation may even be preferable, since it could explain why we see a separation-dependent mass-ratio distribution around intermediate-mass stars but not low-mass stars: more massive stars tend to have more massive disks \citep{Andrews2013} that are more likely to fragment \citep{Kratter2010}.
+Likewise, if the companion formed within a few tens to hundred AU from its primary it will preferentially accrete matter from the dense primary star disk as well as the infalling core material \citep{BBB2002}. The result would be a depletion of low mass-ratio companions as they become intermediate to high mass-ratio companions. The characteristic scale of $\sim 0.3$ that we see in Figure \ref{paper6_fig:mrd} would then be related to the disk timescale and the time at which the fragments form, since with enough time the preferential accretion would push all companions to $q = 1.0$. 
+
+It is also possible that some of the companions found in this work were formed from a gravitationally unstable disk \citep[e.g.][]{Kratter2006, Stamatellos2011}. Being a completely different formation mechanism than the way wide companions form, we would expect the initial companion mass function to differ. Such companions would undergo the same preferential accretion discussed above. This explanation may even be preferable, since it could explain why we see a separation-dependent mass-ratio distribution around intermediate-mass stars but not low-mass stars: more massive stars tend to have more massive disks \citep{Andrews2013} that are more likely to fragment \citep{Kratter2010}. It is not clear whether the scaling of disk mass with stellar mass holds at very early times, when disk fragmentation is likely to be strongest and generate the largest companions. Observations of the dust mass with large submillimeter interferometers such as the Atacama Large Millimeter Array (ALMA) could help determine how big a role disk fragmentation is likely to play in binary star formation.
+ 
 
 
 
@@ -195,6 +216,8 @@ Large scale simulations are likely needed to distinguish between the two formati
 
 There is also a need for further observational efforts. Many of the companions we present in Chapter \ref{chap:survey} are unconfirmed, and so need at minimum follow-up spectroscopy. Follow-up imaging of more of the detections with an adaptive optics system would be useful as well, both for confirmation and validation of the companion temperature and to provide an estimate of the orbital separation. Alternatively or in addition to the imaging, the detections could be observed with spectroscopic measurements over several years to map out the full double-lined spectroscopic orbit and provide a dynamical mass ratio and separation measurement. 
 
+
+TODO: Summarize in a paragraph to make it end better.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
